<resources>
    <string name="app_name">DnD Character Builder 401</string>
    <string name="dnd_title">Dungeons and Dragons 5th Edition</string>
    <string name="pathfinder_title">Pathfinder</string>
    <string name="starfinder_title">Starfinder</string>
    <string name="header_franchise">Lets Get Started!</string>
    <string name="dnd_Dragonborn">Dragonborn</string>
    <string name="dnd_Dwarf">Dwarf</string>
    <string name="dnd_Elf">Elf</string>
    <string name="dnd_Gnome">Gnome</string>
    <string name="dnd_Goliath">Goliath</string>
    <string name="dnd_Halfling">Halfling</string>
    <string name="dnd_Human">Human</string>
    <string name="dnd_Tiefling">Tiefling</string>
    <string name="dnd_raceDesc">Brief Description of the Race</string>
    <string name="prev_page">Prev Page</string>
    <string name="next_page">Next Page</string>
    <string name="what_race">What race are you?</string>
    <string name="what_name">What is your name?</string>
    <string name="dnd_Barbarian">Barbarian</string>
    <string name="dnd_Bard">Bard</string>
    <string name="dnd_Cleric">Cleric</string>
    <string name="dnd_Druid">Druid</string>
    <string name="dnd_Fighter">Fighter</string>
    <string name="dnd_Monk">Monk</string>
    <string name="dnd_Paladin">Paladin</string>
    <string name="dnd_Ranger">Ranger</string>
    <string name="dnd_Rouge">Rouge</string>
    <string name="dnd_Sorcerer">Sorcerer</string>
    <string name="dnd_Warlock">Warlock</string>
    <string name="dnd_Wizard">Wizard</string>
    <string name="dnd_LG">Lawful Good</string>
    <string name="dnd_NG">Neutral Good</string>
    <string name="dnd_CG">Chaotic Good</string>
    <string name="dnd_LN">Lawful Neutral</string>
    <string name="dnd_TN">True Neutral</string>
    <string name="dnd_CN">Chaotic Neutral</string>
    <string name="dnd_LE">Lawful Evil</string>
    <string name="dnd_NE">Neutral Evil</string>
    <string name="dnd_CE">Chaotic Evil</string>
    <string name="dndRace"/>
    <string name="ability_header">Roll for Your Abilities!</string>
</resources>
