<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dndStartActivity">

    <TextView
            android:text="@string/what_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/charName" android:textSize="35sp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="textStart" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/dndName"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/charName" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:hint="Name?" android:textAlignment="center"/>

    <TextView
        android:id="@+id/charRace"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:text="@string/what_race"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dndName" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next_page"
        android:onClick="dndPageTwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dndRaceDesc" />

    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/prev_page"
        android:onClick="dndHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dndRaceDesc" />

    <RadioGroup
        android:id="@+id/raceGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charRace">

        <RadioButton
            android:id="@+id/dndGnome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="raceCheck"
            android:text="@string/dnd_Gnome"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dndHuman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="raceCheck"
            android:text="@string/dnd_Human"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dndGoliath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="raceCheck"
            android:text="@string/dnd_Goliath"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dndElf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="raceCheck"
            android:text="@string/dnd_Elf"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dndTiefling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="raceCheck"
            android:text="@string/dnd_Tiefling"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dndDwarf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="raceCheck"
            android:text="@string/dnd_Dwarf"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dndDragonborn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="raceCheck"
            android:text="@string/dnd_Dragonborn"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dndHalfling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="raceCheck"
            android:text="@string/dnd_Halfling"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/dndRaceDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dnd_raceDesc"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceGroup" />

    <TextView
        android:id="@+id/dndAttr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Ability Score Increases"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dndRaceDesc" />

    <TextView
        android:id="@+id/dndRace"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dndRace"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/btnPrevious"
        app:layout_constraintTop_toBottomOf="@+id/dndAttr"
        app:layout_constraintVertical_bias="0.443" />

</android.support.constraint.ConstraintLayout>