<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".dndPage4Activity">
    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:minHeight="900dp">
        <Button
                android:id="@+id/btnNextAlignmentPage"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:text="@string/next_page"
                android:onClick="dndPageThree"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/dndAlignmentDesc"/>
        <TextView
                android:text="What is your class?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/charClass" android:textSize="45sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <RadioGroup
                android:layout_width="322dp"
                android:layout_height="444dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/charClass" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:id="@+id/radioGroupAlignment">

            <RadioButton
                    android:id="@+id/dndLG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_LG"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>

            <RadioButton
                    android:id="@+id/dndNG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_NG"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>

            <RadioButton
                    android:id="@+id/dndCG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_CG"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>

            <RadioButton
                    android:id="@+id/dndLN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_LN"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>

            <RadioButton
                    android:id="@+id/dndTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_TN"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>

            <RadioButton
                    android:id="@+id/dndCN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_CN"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>

            <RadioButton
                    android:id="@+id/dndLE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_LE"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>

            <RadioButton
                    android:id="@+id/dndNE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_NE"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>

            <RadioButton
                    android:id="@+id/dndCE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="alignmentCheck"
                    android:text="@string/dnd_CE"
                    android:textAlignment="textStart"
                    android:textSize="30sp"/>
        </RadioGroup>
        <TextView
                android:id="@+id/dndAlignmentDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupAlignment"/>
        <TextView
                android:id="@+id/dndAlignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnNext2"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>